made update to watchlist service and routes
